--- a/lib/common/lang/en.json
+++ b/lib/common/lang/en.json
@@ -16,7 +16,36 @@
     "Project" : "Project",
     "Teams Managament" : "Teams Managament",
     "Family & Heailth Care" : "Family & Heailth Care" ,
-    "Business & prjects"  : "Business & prjects"  
-
+    "Business & prjects"  : "Business & prjects",
+    "Name" : "Name" ,
+    "langapp" : "en",
+    "Expencies" : "Expencies",
+    "Pay Debts" : "Pay debts",
+    "Projects" : "Projects",
+    "Total" : "Total",
+    "Paid" : "Paid",
+    "Recived" : "Recived",
+    "Wallet" :"Wallet",
+    "Expancies item" : "Expancies item",
+    "Revenue item" : "Revenue item",
+    "Contacts" : "Contact",
+    "Add some note" : "Add some note",
+    "More options" : "More options",
+    "Less options" : "Less options",
+    "Repated Transaction" : "Repated Transaction",
+    "Upload Image" :"Upload Image",
+    "Repeted" : "Repeted",
+    "Daily" : "Daily",
+    "Weekly" : "Weekly",
+    "Monthly" : "Monthly",
+    "Yearly" : "Yearly",
+    "Transaction alert" : "Transaction alert",
+    "Befor one day" : "Befor one day",
+    "Befor tow day" : "Befor tow day",
+    "At the same time" : "At the same time",
+    "Revnuee" : "Revnue",
+    "Recive Debts" : "Recive Debts",
+    "Recive" : "Recive",
+    "Payy" : "Pay"
 
 }
