finish wallet design and translation

--- a/lib/common/lang/en.json
+++ b/lib/common/lang/en.json
@@ -48,6 +48,54 @@
     "Recive Debts" : "Recive Debts",
     "Recive" : "Recive",
     "Payy" : "Pay",
-    "Purchases and Spending" :"Purchases and Spending"
+    "Purchases and Spending" :"Purchases and Spending",
+    "Add Wallet" : "Add Wallet",
+    "Cash" : "Cash",
+    "Bank Account" : "Bank Account",
+    "Credit Card" : "Credit Card",
+    "Prepaid Card" : "Prepaid Card",
+    "Saving Wallet" : "Saving Wallet",
+    "Hide Wallet" : "Hide Wallet",
+    "title hide wallet" :"The wallet and its balance will be hidden You can create any transactions even unhide",
+    "Create" : "Create",
+    "Edit" : "Edit",
+    "Update Wallet" : "Update Wallet",
+    "Planner Amount" : "Planner\nAmount",
+    "Primary Balance" : "Primary\nBalance",
+    "Start Date" : "Strat Date",
+    "End Date" : "End Date",
+    "Reports Saving Wallet" : "Reports Saving Wallet",
+    "Reports Cash Wallet" : "Reports Cash Wallet",
+    "Reports Bank Wallet" : "Reports Bank Wallet",
+    "Reports Prepaid Wallet" : "Reports Prepaid Wallet",
+    "Reports Credit Wallet" : "Reports Credit Wallet",
+    "From Date" : "From Date",
+    "To Date" : "To Date",
+    "Project Balance" : "Project Balance",
+    "Current Balance" :  "Current Balance",
+    "Remaining Balance" :  "Remaining Balance",
+    "This year" : "This year",
+    "This month" : "This month",
+    "This day" : "This day",
+    "Add Contact" : "Add Contact",
+    "Update Contact" :  "Update Contact",
+    "Save" : "Save",
+    "Cancel" : "Cancel",
+    "Update" : "Update",
+    "Preview Contact" :  "Preview Contact",
+    "Delete Wallet" : "Delete Wallet",
+    "dialog delete wallet" : "This wallet will be deleted along with all transactions made on it and delete associated debt transactions",
+    "Alert" : "Alert",
+    "Ok" :"Ok",
+    "Custom Date" :"Custom Date",
+    "Financial Changes" : "Financial Changes",
+    "Transfering Between Wallets" : "Transfering Between Wallets",
+    "Select Date" : "Select Date",
+    "From Wallet" : "From Wallet",
+    "To Wallet" : "To Wallet",
+    "Transfer" : "TransFer",
+    "Choose Wallet" :  "Choose Wallet"
 
+    
+ 
 }
