--- a/lib/common/lang/ar.json
+++ b/lib/common/lang/ar.json
@@ -48,7 +48,55 @@
     "Recive Debts" : "قبض دين",
     "Recive" : "قبض",
     "Payy" : "صرف",
-    "Purchases and Spending" : "مصاريف ومشتريات"
+    "Purchases and Spending" : "مصاريف ومشتريات",
+    "Add Wallet" : "إضافة محفظة",
+    "Cash" : "سيولة نقدية",
+    "Bank Account" : "حساب بنكي",
+    "Credit Card" : "بطاقة ائتمانية",
+    "Prepaid Card" : "بطاقة مسبقة الدفع",
+    "Saving Wallet" : "محفظة وفر",
+    "Hide Wallet" : "إخفاء المحفظة",
+    "title hide wallet" :"بتفعيل خيار إخفاء المحفظة , لن تظهر المحفظة في قائمة المحفظات أثناء انشاء المعاملات",
+    "Create" : "إنشاء",
+    "Edit" : "تعديل",
+    "Update Wallet" : "تعديل المحفظة",
+    "Planner Amount" : " قيمة المخطط ",
+    "Primary Balance" : " الرصيد الإبتدائي ",
+    "Start Date" : "تاريخ البداية",
+    "End Date" : "تاريخ النهاية",
+    "Reports Saving Wallet" : "تقارير محفظة الوفر",
+    "Reports Cash Wallet" : "تقارير محفظة السيولة النقدية",
+    "Reports Bank Wallet" : "تقارير محفظة الحساب البنكي",
+    "Reports Prepaid Wallet" : "تقارير محفظة البطاقة مسبقة الدفع",
+    "Reports Credit Wallet" : "تقارير محفظة البطاقة الإئتمانية",
+    "From Date" : "من تاريخ",
+    "To Date" : "إلى تاريخ",
+    "Project Balance" : "قيمة المشروع",
+    "Current Balance" :  "الرصيد الحالي",
+    "Remaining Balance" :  "الرصيد المتبقي",
+    "This year" : "هذه السنة",
+    "This month" : "هذا الشهر",
+    "This day" : "هذا اليوم",
+    "Add Contact" : "إضافة جهة تعامل",
+    "Update Contact" :  "تعديل جهة تعامل",
+    "Save" : "إضافة",
+    "Cancel" : "إلغاء",
+    "Update" : "تعديل",
+    "Preview Contact" :  "إستعراض جهة التعامل",
+    "Delete Wallet" : "حذف المحفظة",
+    "dialog delete wallet" : "سيتم حذف المحفظة وحذف جميع المعاملات المرتبطة بها ضمن التطبيق بشكل نهائي , ولن تتمكن من استعادة المعاملات او المحفظة",
+    "Alert" : "تنبيه",
+    "Ok" :" موافق",
+    "Custom Date" :"تحديد تاريخ",
+    "Financial Changes" : "التغير في المحفظة",
+    "Transfering Between Wallets" : "التحويل بين المحفظات",
+    "Select Date" : "إختر فترة زمنية",
+    "From Wallet" : "من المحفظة",
+    "To Wallet" : "إلى المحفظة",
+    "Transfer" : "تحويل",
+    "Choose Wallet" :  "إختر محفظة"
+
+    
 
 
     
